# goldberg_emulator

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Justfile  Makefile  README.md  Readme_experimental.txt  Readme_lobby_connect.txt  Readme_release.txt  build_curl.sh  build_env_x64.bat  build_env_x86.bat  build_set_protobuf_directories.bat  build_steamos.sh  build_win_debug_experimental.bat  build_win_debug_experimental_steamclient.bat  build_win_find_interfaces.bat  build_win_lobby_connect.bat  build_win_release.bat  build_win_release_experimental.bat  build_win_release_experimental_steamclient.bat  download_glew.sh  lobby_connect.cpp
ImGui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_user.h  imgui_widgets.cpp
blog/: 1_year.md
controller/: gamepad.c  gamepad.h
curl/: CMakeLists.txt
detours/: creatwth.cpp
dll/: base.cpp  base.h  common_includes.h  defines.h  dll.cpp  dll.h  flat.cpp  item_db_loader.cpp  item_db_loader.h  local_storage.cpp  local_storage.h  net.proto  network.cpp  network.h  settings.cpp  settings.h  settings_parser.cpp  steam_applist.cpp  steam_apps.cpp  steam_apps.h  steam_client.cpp  steam_client.h  steam_controller.h  steam_controller_disabled.h  steam_friends.h  steam_game_coordinator.h  steam_gamesearch.h  steam_gameserver.cpp  steam_gameserver.h  steam_http.cpp  steam_inventory.cpp  steam_inventory.h  steam_matchmaking.h  steam_matchmaking_servers.cpp  steam_matchmaking_servers.h  steam_musicremote.cpp  steam_networking.h  steam_networking_messages.h  steam_networking_sockets.h  steam_networking_socketsserialized.h  (+12 more)
generate_game_infos/: generate_game_infos.cpp
generate_items_infos/: generate_items_infos.cpp
json/: json.hpp
overlay_experimental/: Base_Hook.cpp  Base_Hook.h  DX10_Hook.cpp  DX10_Hook.h  DX11_Hook.cpp  DX11_Hook.h  DX12_Hook.cpp  DX12_Hook.h  DX9_Hook.cpp  DX9_Hook.h  DirectX_VTables.h  Hook_Manager.cpp  Hook_Manager.h  ImGui_ShaderBlobs.cpp  ImGui_ShaderBlobs.h  OpenGLX_Hook.cpp  OpenGLX_Hook.h  OpenGL_Hook.h  (+10 more)
(+98 files in other folders)
